# cmdr

./: .env.example  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: projects.rs  settings.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/terminal/: iterm.rs  mod.rs
src/components/: AddCommandModal.vue  AddEnvironmentModal.vue  AddProjectModal.vue  AddWorkspaceModal.vue  ConfirmDialog.vue  DebugPanel.vue  ProjectCard.vue  QuickActions.vue  Sidebar.vue
src/router/: index.ts
src/stores/: projects.ts  settings.ts
src/types/: index.ts
src/views/: HomeView.vue  ProjectDetailView.vue  ProjectsView.vue  SettingsView.vue  WorkspacesView.vue
